<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label"/>
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_label"/>

    <EditText
        android:id="@+id/solved"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:hint="@string/story_label" />

    <Space
        android:layout_width="10dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval"/>

    <Space
        android:layout_width="10dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/oval"
        android:layout_gravity="right"
        android:text="@string/event"/>

    <!--Button
        android:id="@+id/friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friend"/-->

    <Space
        android:layout_width="10dp"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/share"
        android:background="@drawable/oval"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/share" />


</LinearLayout>