<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.korisnik.diaryapp.EnterPassw"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back">

    <Space
        android:layout_width="match_parent"
        android:layout_height="185dp" />

    <TextView
        android:id="@+id/textView"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sifra"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="25dp"/>
    <EditText
        android:id="@+id/editText"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="25dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:background="@drawable/circle"
        android:text="@string/OK"

        />


    <Space
        android:layout_width="100dp"
        android:layout_height="88dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="43dp"
        android:layout_height="31dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/circle"
        android:text="@string/edit" />


</LinearLayout>
